--- a/htmlExamples/logined.html
+++ b/htmlExamples/logined.html
@@ -1,93 +1,140 @@
-<header data-vue="" class="header js-header ">
-  <div class="header__affix header-affix affix">
-    <div class="header__wrapper">
-      <div class="header__row">
-        <div class="logo header__logo"><a href="/" title="GG.Bet logo" class="logo__link"></a></div>
-        <nav class="nav header__nav js-header-nav">
-          <ul class="nav__list js-header-list">
-            <li class="nav__item js-header-nav-item"><a href="/sports" class="nav__link">линия</a></li>
-            <li class="nav__item js-header-nav-item"><a href="/live" class="nav__link">live</a></li>
-            <li class="nav__item js-header-nav-item"><a href="/esports" class="nav__link">киберспорт</a></li>
-            <li class="nav__item js-header-nav-item"><a href="/results" class="nav__link">результаты</a></li>
-            <li class="nav__item js-header-nav-item"><a href="/outrights" class="nav__link">Аутрайты</a></li>
-            <li class="nav__item js-header-nav-item"><a href="/sport-statistics" class="nav__link">статистика</a></li>
-            <li class="nav__item js-header-nav-item "><a href="/news/bonuses" class="nav__link">бонусы</a></li>
-            <li class="nav__item js-header-nav-item "><a href="/news" class="nav__link">новости</a></li>
-          </ul>
-        </nav>
-        <div class="header__more-wrapper js-more-wrapper"></div>
-        <div class="header__bar">
-          <div id="__app-oddFormat-select" class="betting-elements header__betting-elements " style="display: flex;">
-            <aside class="__app--is-betting">
-              <div class="__app-Portal-container portal__container___3uBc9 portal__is-filled___3NYuV">
-                <div class="settingsMenu__container___2dofG">
-                  <div class="settingsMenu__settings-wrapper___2kHgl">
-                    <div class="settingsMenu__settings___2jjMM">
-                      <div class="settingsToggler__container___CWQAl" title="Настройки">
-                        <div class="settingsToggler__stub___2r123">
-                          <div class="settingsToggler__caret-wrapper___2KWfa"><svg width="16" height="16"
-                              viewBox="0 0 1024 1024" class="settingsToggler__caret___1nsIF __app-Icon">
-                              <use xlink:href="#arrow_056ca"></use>
-                            </svg></div><svg width="16" height="16" viewBox="0 0 16 16"
-                            class="settingsToggler__icon___2tlTB __app-Icon">
-                            <use xlink:href="#settings_eaeca"></use>
-                          </svg>
-                        </div>
+<header data-vue="" class="header js-header">
+  <div class="header__wrapper header-affix affix affixed headroom--top headroom--not-bottom">
+    <div class="header__row">
+      <div class="logo header__logo"><a href="/en" title="GG.Bet logo" class="logo__link"></a></div>
+      <nav class="nav header__nav js-header-nav">
+        <ul class="nav__list js-header-list">
+          <li class="nav__item js-header-nav-item"><a href="/en/sports" class="nav__link">sports</a></li>
+          <li class="nav__item js-header-nav-item"><a href="/en/live" class="nav__link">live</a></li>
+          <li class="nav__item js-header-nav-item"><a href="/en/esports" class="nav__link">esports</a></li>
+          <li class="nav__item js-header-nav-item"><a href="/en/results" class="nav__link">results</a></li>
+          <li class="nav__item js-header-nav-item"><a href="/en/outrights" class="nav__link">outrights</a></li>
+          <li class="nav__item js-header-nav-item"><a href="/en/casino" class="nav__link">Casino</a></li>
+          <li class="nav__item js-header-nav-item"><a href="/en/sport-statistics" class="nav__link">Statistics</a></li>
+          <li class="nav__item js-header-nav-item "><a href="/en/news/bonuses" class="nav__link">promo</a></li>
+          <li class="nav__item js-header-nav-item "><a href="/en/news" class="nav__link">news</a></li>
+        </ul>
+      </nav>
+      <div class="header__more-wrapper js-more-wrapper"></div>
+      <div class="header__bar">
+        <div id="__app-oddFormat-select" class="betting-elements header__betting-elements " style="display: flex;">
+          <aside class="__app--is-betting">
+            <div class="__app-Portal-container portal__container___3uBc9 portal__is-filled___3NYuV">
+              <div class="settingsMenu__container___2dofG">
+                <div class="settingsMenu__settings-wrapper___2kHgl">
+                  <div class="settingsMenu__settings___2jjMM">
+                    <div class="settingsToggler__container___CWQAl" title="Settings">
+                      <div class="settingsToggler__stub___2r123">
+                        <div class="settingsToggler__caret-wrapper___2KWfa"><svg width="16" height="16"
+                            viewBox="0 0 1024 1024" class="settingsToggler__caret___1nsIF __app-Icon">
+                            <use xlink:href="#arrow_056ca"></use>
+                          </svg></div><svg width="16" height="16" viewBox="0 0 16 16"
+                          class="settingsToggler__icon___2tlTB __app-Icon">
+                          <use xlink:href="#settings_eaeca"></use>
+                        </svg>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </aside>
-          </div> <span class="theme-switcher dark"><span class="theme-switcher__wrapper"><span
-                class="theme-switcher__point theme-switcher__point--dark"><span
-                  class="theme-switcher__icon theme-switcher__icon--dark"></span></span> <span
-                class="theme-switcher__point theme-switcher__point--light"><span
-                  class="theme-switcher__icon theme-switcher__icon--light"></span></span></span></span>
-          <div class="inbox header__inbox inbox--disabled">
-            <div class="inbox__wrap"><a href="#!/message/inbox" class="inbox__button">
-                <!---->
-                <div class="corners inbox__corners">
-                  <div class="corners__item corners__item--tl"></div>
-                  <div class="corners__item corners__item--tr"></div>
-                  <div class="corners__item corners__item--bl"></div>
-                  <div class="corners__item corners__item--br"></div>
-                </div>
-              </a>
-              <!---->
             </div>
-          </div>
-          <div class="userbar header__userbar">
-            <div class="header-profile userbar__header-profile"><a href="#!/player/profile-data?_locale=ru"
-                class="header-profile__name">
-                zlodei7233011@gmail.com
-              </a> <a href="/api/auth/logout" class="header-profile__logout icon-logout"></a></div>
-            <div class="header-balance userbar__header-balance ">
-              <div class="header-balance__wrapper">
-                <div id="dropdown-balance" aria-haspopup="true" aria-expanded="true" class="header-balance__toggle">
-                  <div class="header-balance__currency"><span class="header-balance__value"><span>750.50</span>
-                      RUB
-                    </span></div> <span class="header-balance__caret">&nbsp;</span>
-                </div>
-                <ul aria-labelledby="dropdown-balance" class="header-balance__hint">
-                  <li class="header-balance__hint-item"><span class="header-balance__hint-title">Лицевой счёт:</span> <a
-                      href="#!/player/profile-deposit" class="header-balance__hint-value"><span>750.50</span>
-                      <span>RUB</span></a></li>
-                  <!---->
-                  <li class="header-balance__hint-item"><span class="header-balance__hint-title">Выводы:</span> <a
-                      href="#!/player/profile-deposit" class="header-balance__hint-value"><span>750.50</span>
-                      <span>RUB</span></a></li>
-                </ul>
+          </aside>
+        </div> <span class="theme-switcher dark"><span class="theme-switcher__wrapper"><span
+              class="theme-switcher__point theme-switcher__point--dark"><span
+                class="theme-switcher__icon theme-switcher__icon--dark"></span></span> <span
+              class="theme-switcher__point theme-switcher__point--light"><span
+                class="theme-switcher__icon theme-switcher__icon--light"></span></span></span></span>
+        <div class="header__locale-switcher ">
+          <div class="dropdown locale-switcher">
+            <div id="dropdown-language" class="locale-switcher__toggle">
+              <div class="locale-switcher__current ">
+                <div class="locale-switcher__current-item"><svg class="locale-switcher__ico">
+                    <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-en"></use>
+                  </svg> <span class="locale-switcher__current-lang">
+                    en </span></div> <span class="locale-switcher__caret">&nbsp;</span>
               </div>
             </div>
+            <div class="locale-switcher__menu">
+              <div class="locale-switcher__lang-list"><a href="/en"
+                  class="locale-switcher__link locale-switcher__link--active">
+                  <div class="locale-switcher__lang-content"><svg class="locale-switcher__ico">
+                      <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-en"></use>
+                    </svg> <span class="locale-switcher__lang-code">English</span></div> <svg
+                    class="locale-switcher__check">
+                    <use xlink:href="/assets/img/frontend/icons/sprite-mono.svg?v1625476080#icon-check"></use>
+                  </svg>
+                </a> <a href="/ru" class="locale-switcher__link ">
+                  <div class="locale-switcher__lang-content"><svg class="locale-switcher__ico">
+                      <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-ru"></use>
+                    </svg> <span class="locale-switcher__lang-code">Russian</span></div>
+                </a> <a href="/cn" class="locale-switcher__link ">
+                  <div class="locale-switcher__lang-content"><svg class="locale-switcher__ico">
+                      <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-cn"></use>
+                    </svg> <span class="locale-switcher__lang-code">Chinese</span></div>
+                </a> <a href="/pt" class="locale-switcher__link ">
+                  <div class="locale-switcher__lang-content"><svg class="locale-switcher__ico">
+                      <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-pt"></use>
+                    </svg> <span class="locale-switcher__lang-code">Portuguese</span></div>
+                </a> <a href="/uk-ua" class="locale-switcher__link ">
+                  <div class="locale-switcher__lang-content"><svg class="locale-switcher__ico">
+                      <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-uk-ua"></use>
+                    </svg> <span class="locale-switcher__lang-code">Ukrainian</span></div>
+                </a> <a href="/ja" class="locale-switcher__link ">
+                  <div class="locale-switcher__lang-content"><svg class="locale-switcher__ico">
+                      <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-ja"></use>
+                    </svg> <span class="locale-switcher__lang-code">Japanese</span></div>
+                </a> <a href="/pl" class="locale-switcher__link ">
+                  <div class="locale-switcher__lang-content"><svg class="locale-switcher__ico">
+                      <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-pl"></use>
+                    </svg> <span class="locale-switcher__lang-code">Polish</span></div>
+                </a> <a href="/de" class="locale-switcher__link ">
+                  <div class="locale-switcher__lang-content"><svg class="locale-switcher__ico">
+                      <use xlink:href="/assets/img/frontend/icons/sprite-color.svg?v1625476080#flag-de"></use>
+                    </svg> <span class="locale-switcher__lang-code">German</span></div>
+                </a></div>
+            </div>
           </div>
-          <div class="auth-bar header__auth-bar--authorized"><a href="#!/player/profile-deposit"
-              class="auth-bar__btn auth-bar__btn--green auth-bar__btn--margin">
-              Пополнить
-            </a> <a href="#!/player/profile-bets-history?_locale=ru" class="auth-bar__btn auth-bar__btn--orange">
-              Мои пари
-            </a></div>
         </div>
+        <div class="inbox header__inbox">
+          <div class="inbox__wrap inbox__wrap--has-unread"><a href="#!/message/inbox"
+              class="inbox__button inbox__button--is-unread"><i class="inbox__count">7</i>
+              <div class="corners inbox__corners">
+                <div class="corners__item corners__item--tl"></div>
+                <div class="corners__item corners__item--tr"></div>
+                <div class="corners__item corners__item--bl"></div>
+                <div class="corners__item corners__item--br"></div>
+              </div>
+            </a>
+            <!---->
+          </div>
+        </div>
+        <div class="userbar header__userbar">
+          <div class="header-profile userbar__header-profile"><a href="#!/player/profile-data"
+              class="header-profile__name">
+              sshas01@mail.ru
+            </a> <a href="/en/api/auth/logout" class="header-profile__logout icon-logout"></a></div>
+          <div class="header-balance userbar__header-balance ">
+            <div class="header-balance__wrapper">
+              <div id="dropdown-balance" aria-haspopup="true" aria-expanded="true" class="header-balance__toggle">
+                <div class="header-balance__currency"><span class="header-balance__value"><span>10.00</span>
+                    EUR
+                  </span></div> <span class="header-balance__caret">&nbsp;</span>
+              </div>
+              <ul aria-labelledby="dropdown-balance" class="header-balance__hint">
+                <li class="header-balance__hint-item"><span class="header-balance__hint-title">Real money:</span> <a
+                    href="#!/player/profile-deposit" class="header-balance__hint-value"><span>10.00</span>
+                    <span>EUR</span></a></li>
+                <!---->
+                <li class="header-balance__hint-item"><span class="header-balance__hint-title">Withdrawal:</span> <a
+                    href="#!/player/profile-deposit" class="header-balance__hint-value"><span>10.00</span>
+                    <span>EUR</span></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="auth-bar header__auth-bar--authorized"><a href="#!/player/profile-deposit"
+            class="auth-bar__btn auth-bar__btn--green auth-bar__btn--margin">deposit</a> <a
+            href="#!/player/profile-bets-history" class="auth-bar__btn auth-bar__btn--orange">my bets</a></div>
       </div>
     </div>
   </div>
